[gd_scene load_steps=26 format=3 uid="uid://b3h84hsqrhdnw"]

[ext_resource type="Script" path="res://objects/enemy/boar/boar.gd" id="1_sr7yn"]
[ext_resource type="Texture2D" uid="uid://b8kqndj05cghd" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet-White.png" id="2_tka82"]
[ext_resource type="Texture2D" uid="uid://ddb1ygpjuig5j" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet2-White.png" id="3_4itbv"]
[ext_resource type="Texture2D" uid="uid://dbjnrf6gejio6" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Idle/Idle-Sheet-White.png" id="4_24f4f"]
[ext_resource type="Texture2D" uid="uid://dw7wsd8y68aig" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Run/Run-Sheet-White.png" id="5_lsh8m"]
[ext_resource type="Texture2D" uid="uid://ropbljs46x5v" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Walk/Walk-Base-Sheet-White.png" id="6_hgnuv"]
[ext_resource type="Script" path="res://objects/enemy/FiniteStateMachine.gd" id="7_sg55l"]
[ext_resource type="Script" path="res://objects/enemy/boar/IdleState.gd" id="8_7xopr"]
[ext_resource type="Script" path="res://objects/enemy/boar/WalkState.gd" id="9_nnay6"]
[ext_resource type="Script" path="res://objects/enemy/boar/AttackState.gd" id="10_u7mti"]
[ext_resource type="Script" path="res://objects/enemy/boar/DeadState.gd" id="11_j1oub"]
[ext_resource type="Script" path="res://objects/enemy/hit_state.gd" id="12_ekbvp"]
[ext_resource type="Script" path="res://objects/enemy/boar/PlayerDetection.gd" id="14_xaxhw"]
[ext_resource type="Script" path="res://objects/enemy/boar/FacingCollisionShape2D.gd" id="15_t4ssu"]
[ext_resource type="Script" path="res://objects/enemy/boar/Hitbox.gd" id="16_wy2se"]

[sub_resource type="Animation" id="Animation_yxuu8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y4544"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_tka82")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_xo8i4"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.965936),
"update": 1,
"values": [ExtResource("3_4itbv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_fqmwb"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_24f4f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_1okbo"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_lsh8m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_bvr8d"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_hgnuv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ads7n"]
_data = {
"RESET": SubResource("Animation_yxuu8"),
"dead": SubResource("Animation_y4544"),
"hit": SubResource("Animation_xo8i4"),
"idle": SubResource("Animation_fqmwb"),
"run": SubResource("Animation_1okbo"),
"walk": SubResource("Animation_bvr8d")
}

[sub_resource type="GDScript" id="GDScript_ohfb6"]
script/source = "extends Node

class_name Damageable

@onready var debug : Label = $debug
@onready var can_take_damage : bool = true

signal on_hit(node : Node, damage_taken : int, knockback_direction : Vector2)

signal on_is_dead()


@export var health : float  :
	get:
		return health
	set(value):
		health = value
	
func hit(damage : int, knockback_direction : Vector2, knockback_speed : float):
	if can_take_damage:
		health -= damage
		health_changed(health, damage)
	
		if(check_if_dead()):
			emit_signal(\"on_is_dead\")
			


func check_if_dead():
	return health <= 0.0

func health_changed(health : float, damage : float):
	SignalBus.emit_signal(\"on_health_changed\", get_parent(), (health - damage) - health)
		
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jkjyg"]
radius = 32.0
height = 204.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1b2df"]
radius = 13.0

[node name="boar_white" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_sr7yn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tka82")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ads7n")
}

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("7_sg55l")

[node name="Idle" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("8_7xopr")
character = NodePath("../..")

[node name="Walk" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("9_nnay6")
character = NodePath("../..")

[node name="IdleTimer" type="Timer" parent="FiniteStateMachine/Walk"]
wait_time = 6.0
one_shot = true

[node name="Attack" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("10_u7mti")
character = NodePath("../..")

[node name="Dead" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("11_j1oub")
character = NodePath("../..")

[node name="Hit" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("dead_state")]
script = ExtResource("12_ekbvp")
dead_state = NodePath("../Dead")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Hit"]
wait_time = 0.5
one_shot = true

[node name="Damageable" type="Node" parent="."]
script = SubResource("GDScript_ohfb6")
health = 20.0

[node name="PlayerDetection" type="Area2D" parent="." node_paths=PackedStringArray("facing_shape", "boar")]
collision_layer = 0
collision_mask = 2
script = ExtResource("14_xaxhw")
facing_shape = NodePath("CollisionShape2D")
boar = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-100, -15)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jkjyg")
script = ExtResource("15_t4ssu")
facing_left_position = Vector2(-100, -15)
facing_right_position = Vector2(100, -15)

[node name="Debug" type="Label" parent="."]
offset_left = -23.0
offset_top = -32.0
offset_right = 26.0
offset_bottom = -6.0
text = "debug"

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("16_wy2se")
state_machine = NodePath("../FiniteStateMachine")
knockback_speed = 350.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
position = Vector2(-1, 1)
polygon = PackedVector2Array(-12, -1, -5, -7, 6, -5, 11, 3, 10, 10, 8, 14, 7, 15, 4, 15, 0, 11, -5, 15, -12, 15, -12, 12, -17, 9, -18, 3, -12, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1b2df")

[connection signal="timeout" from="FiniteStateMachine/Walk/IdleTimer" to="FiniteStateMachine/Walk" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Hit/Timer" to="FiniteStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Walk" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="FiniteStateMachine/Attack" method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Hitbox" to="Hitbox" method="_on_body_entered"]
